--- a/ios/WaytoDailyLounge/Info.plist
+++ b/ios/WaytoDailyLounge/Info.plist
@@ -7,11 +7,11 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>WaytoDailyLounge</string>
+	<string>Wayto:Daily Lounge</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.WaytoDailyLounge</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -33,15 +33,14 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>NSDatePickerUsageDescription</key>
+	<string>This app uses the date picker to allow you to filter service history by selecting specific dates.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>This app needs access to save photos to your photo library.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app needs access to your photo library to select and use images.</string>
-	<key>RCTNewArchEnabled</key>
-	<key>NSDatePickerUsageDescription</key>
-	<string>This app uses the date picker to allow you to filter service history by selecting specific dates.</string>
 	<key>RCTNewArchEnabled</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
